master_worker/deployment/PayaraServer/serverRGM/002-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-rgm
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  externalIPs:
  - 128.5.9.82
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
  selector:
    app: nginx-ingress-rmg
